Correction des bugs que vous nous avez signalé:
- tu ne peux plus être assigné à un groupe vide par erreur.