@@ -1,1 +1,0 @@
-Tu peux maintenant swiper vers la gauche pour changer de groupe !
