@@ -1,2 +1,5 @@
+Nouvelles fonctionnalités:
+- tu peux maintenant sélectionner ta ville pour rencontrer des gens autour de toi!
+
 Correction des bugs que vous nous avez signalé:
 - tu ne peux plus être assigné à un groupe vide par erreur.
